[gd_scene load_steps=8 format=2]

[ext_resource path="res://actors/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/topdown-shooter/Spritesheet/spritesheet_characters.png" type="Texture" id=2]
[ext_resource path="res://projectiles/Fireball.tscn" type="PackedScene" id=3]
[ext_resource path="res://weapons/FireballWeapon.gd" type="Script" id=4]
[ext_resource path="res://actors/ManaPool.tscn" type="PackedScene" id=5]
[ext_resource path="res://actors/HealthPool.tscn" type="PackedScene" id=6]

[sub_resource type="CapsuleShape2D" id=1]
radius = 13.0

[node name="Player" type="KinematicBody2D"]
position = Vector2( 512, 282 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 430, 132, 25.3578, 44 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="FireballWeapon" type="Node2D" parent="."]
script = ExtResource( 4 )
Fireball = ExtResource( 3 )

[node name="ManaPool" parent="." instance=ExtResource( 5 )]

[node name="HealthPool" parent="." instance=ExtResource( 6 )]
